# simplefactory

./: .gitignore  README.md
acgenius/: CHANGELOG.md  CONTRIBUTE.md  README.md  conftest.py  pyproject.toml  settings.yaml
acgenius/src/acgenius/: __main__.py  acgenius.py  config.py  main.py
acgenius/src/acgenius/resources/: directories.py  ip_acgs.py  models.py  rules.py  tags.py  utils.py
acgenius/src/acgenius/resources/ip_acgs/: inventory.py  (+2 more)
acgenius/src/acgenius/routing/: actions.py  errors.py  routes.py
acgenius/src/acgenius/validation/: __init__.py  directories.py  ip_acgs.py  rules.py  utils.py
acgenius/tests/: local_scens  local_scens.md  test_acgenius.py
acgenius/tests/acgenius/: test_acgenius.py  test_config.py
acgenius/tests/acgenius/resources/: test_utils_resources.py
acgenius/tests/acgenius/routing/: test_actions.py  test_errors.py  test_routes.py
acgenius/tests/acgenius/validation/: test_directories_validation.py  test_ip_acgs_validation.py  test_rules_validation.py  test_utils_validation.py
ad-ip-acg/: CHANGELOG.md  CONTRIBUTE.md  README.md  config.json  config.yaml  pyproject.toml  settings.yaml
ad-ip-acg/src/ip-acg/: main.py
ad-ip-acg/src/ip_acg/: actions.py  config.py  directories.py  exceptions.py  feedback.py  interpretation.py  ip_acgs.py  main.py  models.py  routes.py  validation.py  workspace_directories.py
ad-ip-acg/src/ip_acg/resources/: directories.py  ip_acgs.py
ad-ip-acg/src/ip_acg/routing/: routes.py
ad-ip-acg/src/ip_acg/validation/: __init__.py  ip_acgs.py  rules.py  utils.py
ad-ip-acg/tests/: test_module.py
(+7 files in other folders)
